02/05/2023
Submitted - day16 - Assignment - Find good day

03/05/2023
Submitted - day16 - Homework - Single number 3

04/05/2023
Submitted - day16 - Homework - Sub array with bitwise OR 1
